# fms02

./: app.py  download_comp_result_module.py  fights.db  fms_model.py  pyproject.toml  rec_local.txt  requirements.txt
migrations/versions/: 522e1ed584b6_added_field_to_registration.py
temp_files/: comp_result.xlsx  regs.csv  regs_strategy_1.csv
templates/: agecategoryedit.html  competition.html  competitions.html  fight_map (copy).html  fight_map.html  fightconstructorstep2.html  fights.html  newagecategory.html  newcompetition.html  newfighter.html  participants.html  referee.html  settings.html  visitor.html
