[tool.poetry]
name = "repl_python3_fms02"
version = "0.1.0"
description = ""
authors = ["Zhenya1975 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-Bootstrap = "^3.3.7"
WTForms = "^3.0.1"
SQLAlchemy = "^1.4.35"
Flask-Migrate = "^3.1.0"
Flask-WTF = "^1.0.1"
pandas = "^1.4.2"
Flask = "^2.1.1"
Flask-SocketIO = "^5.1.1"
Flask-SQLAlchemy = "^2.5.1"
alembic = "^1.7.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
